# localflow

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MODEL_SETUP.md  PLAN.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  eslint.config.js  handoff.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
docs/: ARCHITECTURE.md  MODEL_SETUP.md  PARITY_MATRIX.md  README.md  REPO_AUDIT.md  ROADMAP.md  TESTING.md  TROUBLESHOOTING.md  mobile-sdk.md  network-policy.md
prompts/: command_mode.md  dictation_cleanup.md
scripts/: Build-Installer.ps1  Check-Ollama.ps1  Install-DesktopShortcut-linux.sh  Install-Prereqs-linux.sh  Install-Prereqs.ps1  Run-Checks.ps1  Set-WhisperModelPath.ps1  Start-Dev.ps1  Start-LocalFlow-linux.sh  Start-LocalFlow.ps1  Start-LocalFlow.vbs  Test-DesktopBoot.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  desktop_health.rs  lib.rs  main.rs  native_dictation.rs
src-tauri/src/asr/: metrics.rs  mod.rs  stabilizer.rs  streaming.rs  windows.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/context/: mod.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/insertion/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/privacy/: mod.rs
src-tauri/src/refinement/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/transcript/: mod.rs
src-tauri/src/workflow/: mod.rs
tests/: asr-windows.test.ts  audio-feature-smoothing.test.ts  (+25 more)
(+30 files in other folders)
